samples/_failures_safe/1761450606_610286_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6df49f8.c: In function ‘main’:
./samples/SAFE/__tmp_e6df49f8.c:154:17: error: expected ‘;’ at end of input
  154 |     print_matrix
      |                 ^
      |                 ;
./samples/SAFE/__tmp_e6df49f8.c:154:5: error: expected declaration or statement at end of input
  154 |     print_matrix
      |     ^~~~~~~~~~~~
